[package]
name = "tower-cache-control"
description = "Tower middleware to set Cache-Control response header"
authors = ["Evgeny Kobzev <jenyakobzev@gmail.com>"]
edition = "2021"
version = "1.0.0"
license = "MIT"

[dependencies]
futures = "0.3.31"
http = "1.3.1"
tower-layer = "0.3.3"
tower-service = "0.3.3"
headers = "0.4.0"
